Fix ajv Align text on vote page add global package.json to run everything from root add package-lock.json

--- a/packages/frontend/src/styles/Proposals.module.css
+++ b/packages/frontend/src/styles/Proposals.module.css
@@ -34,7 +34,7 @@
     .columnTime {
         display: flex;
         flex-direction: column;
-        align-items: end;
+        align-items: flex-end;
         justify-content: center;
         margin: 0 5px 2px 2px;
         .statusActive {
